--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="sub-title">My Work</div>
             <div class="worklist">
                 <div class="work">
-                    <img src="images/work-1.png">
+                    <img src="work-1.png">
                     <div class="layer">
                         <h3>Blogging Application</h3>
                           <!-- <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque optio esse at architecto odit deleniti non! Quod impedit dolores molestiae eligendi asperiores corporis incidunt itaque sint, sapiente aut temporibus qui illo non!</h3>   -->
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png" alt="">
+                    <img src="work-2.png" alt="">
                     <div class="layer">
                         <h3>Covid-19 Tracker App</h3>
                           <!-- <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque optio esse at architecto odit deleniti non! Quod impedit dolores molestiae eligendi asperiores corporis incidunt itaque sint, sapiente aut temporibus qui illo non!</h3>   -->
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png" alt="">
+                    <img src="work-3.png" alt="">
                     <div class="layer">
                         <h3>Cab Booking App</h3>
                           <!-- <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque optio esse at architecto odit deleniti non! Quod impedit dolores molestiae eligendi asperiores corporis incidunt itaque sint, sapiente aut temporibus qui illo non!</h3>   -->
@@ -176,7 +176,7 @@
 
 
                     </div>
-                    <a href="images/Hariom_Kumar_1yr_Experience .pdf" download class="btn btn2">Download CV</a>
+                    <a href="Hariom_Kumar_1yr_Experience .pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
