--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="work-2.png" alt="">
+                    <img src="work-2.png" alt="My Work">
                     <div class="layer">
                         <h3>Covid-19 Tracker App</h3>
                           <!-- <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque optio esse at architecto odit deleniti non! Quod impedit dolores molestiae eligendi asperiores corporis incidunt itaque sint, sapiente aut temporibus qui illo non!</h3>   -->
