--- a/index.html
+++ b/index.html
@@ -47,17 +47,19 @@
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>Java</span><br></span></li>
-                        <li><span>SpringBoot</span><br></span></li>
-                        <li><span>Hibernate</span><br></span></li>
+                        <li>  <span>Java</span><span> &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; &#9734 &#9734 &#9734 &#9734</span><br></span></li>
+                      <li> <span>SpringBoot</span><span>  &nbsp; &#9734 &#9734 &#9734 &#9734</span><br></span></li>
+                       <li><span>Hibernate</span><span>  &nbsp; &nbsp;  &#9734 &#9734 &#9734 &#9734</span><br></span></li>
 
-                        <li><span>HTML</span><br></li>
-                        <li><span>CSS</span><br></span></li>
-                        <li><span>Bootstrap</span><br></span></li>
+                       <li> <span>HTML &nbsp;</span><span> &nbsp;&nbsp; &nbsp;  &nbsp; &nbsp;&#9734 &#9734 &#9734 &#9734</span><br></li>
+                       <li><span>CSS </span><span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &#9734 &#9734 &#9734 &#9734</span><br></span></li>
+                       <li><span>SQL</span><span>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp; &nbsp; &#9734 &#9734 &#9734 &#9734</span><br></span></li>
 
-                        <li><span>JavaScript</span><br></span></li>
-                        <li><span>ReactJs</span><br></span></li>
-                        
+                       <li><span>Bootstrap</span><span> &nbsp; &nbsp;  &#9734 &#9734 &#9734</span><br></span></li>
+
+                       <li><span>JavaScript</span><span>  &nbsp;  &#9734 &#9734 &#9734</span><br></span></li>
+                       <li><span>ReactJs</span><span>&nbsp;&nbsp;  &nbsp; &nbsp; &#9734 &#9734 &#9734</span><br></span></li>
+                
 
 
                     </ul>
